# Task-Manager

./: Cargo.toml  README.md
src/: main.rs
src/handler/: datatypes.rs  mod.rs  tasks.rs
src/manager/: signal.rs
